<resources>
    <string name="app_name">GreenDemy</string>
    <string name="notifications">Notifications</string>
    <string name="ok">OK</string>
    <string name="trial_warning">Your Trial Is Ending Soon</string>
    <string name="upgrade">Upgrade</string>
    <string name="lorem_ipsum">What is Lorem Ipsum? Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="get_started">Get Started</string>
    <string name="login_enter_phone">Enter your phone number to start using GreenDemy!</string>
    <string name="phone">Phone number</string>
    <string name="btn_continue">Continue</string>
    <string name="enter_verification_code">Enter verification code sent to your phone number</string>
    <string name="btn_verify">Verify</string>
    <string name="verification_code">Verification Code</string>
    <string name="btn_change_phone_text">Change Phone Number</string>
    <string name="invalid_phone">Please enter a valid phone number!</string>
    <string name="invalid_otp">Please enter a valid verification code!</string>
    <string name="a_moment">a moment please</string>
    <string name="verifying_phone">Verifying Phone Number</string>
    <string name="verifying_code">Verifying code</string>
    <string name="error_occurred">An error occurred!</string>
    <string name="login_error_occurred">Could not login. An error occurred!</string>
    <string name="account_blocked">Your account has been blocked! Contact admin for more info</string>
    <string name="plan_expired">Your plan has expired!</string>
    <string name="trial_expired">Your Trial Has Expired!</string>
    <string name="plan_expires_in">Your Plan Expires In %d Days</string>
    <string name="trial_expires_in">Your Trial Expires In %d Days</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email Address</string>
    <string name="update_profile">Update</string>
    <string name="gender">Select Gender</string>
    <string name="updating_profile">Updating profile...</string>
    <string name="update_successful">Update successful!</string>
    <string name="all_caught_up">All caught up! No notifications found</string>
    <string name="notif_deleted_successfully">Notification Deleted Successfully!</string>
    <string name="update">Update</string>
    <string name="date">Notification date</string>
    <string name="notif_description">Notification description</string>
    <string name="notif_title">Notification title</string>
    <string name="upload_successful">Upload successful!</string>
    <string name="add">Add</string>
    <string name="courses">Courses</string>
    <string name="view_all">View All</string>
    <string name="username_placeholder_text">User name</string>
    <string name="phone_number_text_placeholder">Ph: +91 89559 ***</string>
    <string name="email_text_placeholder">Email: user@greendemy.com</string>
    <string name="logout">Logout</string>
    <string name="sub_details">Subscription Details</string>
    <string name="trial_expiration_warning">Your trial will expire on 2020-07-26 at 2:00 PM.  If you will like to continue Upgrade Now.</string>
    <string name="trial_expired_explanation">Your trial period has expired! If you want to continue using GreenDemy, please consider upgrading your account to a paid plan.</string>
    <string name="plan_expired_explanation">Your current plan has expired. If you want to continue using GreenDemy please consider renewing or upgrading your current plan.</string>
    <string name="trial_warning_text_explained">Your trial will expire on %s! \n If you want to continue using GreenDemy please consider upgrading your account to a paid plan.</string>
    <string name="plan_warning_text_explained">Your plan will expire on %s! \n If you want to continue using GreenDemy please consider renewing or upgrading your current plan.</string>
    <string name="trial_expiration_text_active">You are currently using GreenDemy on a trial period which will expire on %s. \n If you would like to continue using GreenDemy after the trial period, please consider upgrading your account to a paid plan!</string>
    <string name="plan_expiration_text_active">You are currently using GreenDemy on a paid plan which will expire on %s. \n If you would like to continue using GreenDemy after your plan period, please consider renewing or upgrading your current plan!</string>
    <string name="status_text_placeholder">Status: Admin</string>
    <string name="status_text">Status: Admin</string>
    <string name="terms_and_conditions_custom">By continuing, you agree to our \nTerms of service and Privacy policy</string>
    <string name="resend__otp_code">Resend</string>
    <string name="verfication_success">Verification Successful!</string>
    <string name="could_not_verify_phone">Could not verify your phone number!</string>
    <string name="all_caught_up_no_courses">All caught up! No courses found.</string>
    <string name="title">Title</string>
    <string name="videos">Videos</string>
    <string name="course_deleted_successfully">Course deleted successfully!</string>
    <string name="course_title">Course Title</string>
    <string name="course_decription">Course Description</string>
    <string name="course_no_of_students">Current No Of Students Enrolled</string>
    <string name="course_status">Course Status</string>
    <string name="update_course">Update Course</string>
    <string name="add_course">Add course</string>
    <string name="section_deleted_successfully">Section/Lesson Deleted Successfully!</string>
    <string name="section_title">Lesson One: Verbs</string>
    <string name="all_caught_up_no_courses_section">All caught up! No lessons found</string>
    <string name="player_time_holder">00:00:00</string>
    <string name="player_error">Could not initialize video player</string>
    <string name="update_course_lesson">Update Lesson</string>
    <string name="course_content">Lesson Content (basic HTML allowed)</string>
    <string name="video_type">Video Type</string>
    <string name="select_video">Select Video</string>
    <string name="external_link">External Link (optional)</string>
    <string name="attachment">Attach File (any kind of file) (optional)</string>
    <string name="non_empty_title">Title must not be empty</string>
    <string name="lesson_title">Lesson Title</string>
    <string name="lesson_video">Video</string>
    <string name="view_lesson">View Lesson</string>
    <string name="upgrade_your_plan_text">Oops! You need to upgrade or renew your plan in order to view the videos here!</string>
    <string name="about_app">About GreenDemy</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="subject">Subject</string>
    <string name="message">Message...</string>
    <string name="send">Send</string>
    <string name="or">OR</string>
    <string name="telephone">tel</string>
    <string name="app_name_text">App name</string>
    <string name="trial_period">Free trial period (in days)</string>
    <string name="about_app_text">About app (basic HTML allowed)</string>
    <string name="input_terms_and_conditions"><![CDATA[Terms & conditions (basic HTML allowed)]]></string>
    <string name="contact_telephone">Contact phone</string>
    <string name="query_email">Contact/Query email</string>
    <string name="payment_option">Payment option</string>
    <string name="input_app_version">Current app version</string>
    <string name="update_available">Update available!</string>
    <string name="upgrade_plans">Upgrade Plans</string>
    <string name="home_slides">Home Slides</string>
    <string name="all_caught_up_no_home_slides">All caught up! No slides found!</string>
    <string name="item_deleted">Slide Item deleted successfully!</string>
    <string name="slider_title">Slide Title (Optional)</string>
    <string name="input_subtitle">Slide Subtitle (Optional)</string>
    <string name="input_go_to_url">Redirection Url (url to go when clicked) (Optional)</string>
    <string name="plan_deleted">Plan deleted successfully!</string>
    <string name="currency_symbol">Currency Symbol e.g ₹ or ₦</string>
    <string name="subscription">Subscription</string>
    <string name="plan_amount">₦ 2,100</string>
    <string name="plan_name">Gold Plan</string>
    <string name="all_caught_up_no_plans_found">All caught up! No plans found</string>
    <string name="input_plan_name">Plan name (e.g Gold or Pro)</string>
    <string name="input_plan_duration_name">Plan duration name (e.g 1 Month)</string>
    <string name="input_duration_in_days">Plan duration in days (e.g 31)</string>
    <string name="input_plan_amount">Plan Amount (e.g 750)</string>
    <string name="expiry_year">Expiry Year</string>
    <string name="make_payment">Make Payment</string>
    <string name="plan_upgraded">Plan upgraded successfully!</string>
    <string name="could_not_upgrade">An error occurred! Could not upgrade plan!</string>
    <string name="paystack_public_key">pk_test_37e019d6862d285837f77dac2b42ba952f96bc9b</string>
    <string name="input_currency_name">Currency name (e.g NGN, INR, USD)</string>
    <string name="input_country_code">Country code (e.g NG, IN, US)</string>
    <string name="all_users">All Users</string>
    <string name="all_caught_up_no_users">All caught up! No users found!</string>
    <string name="user_deleted_successfully">User deleted successfully!</string>
    <string name="status_updated_successfully">Status Updated Successfully!</string>
    <string name="membership_status">Membership Status:</string>
    <string name="accessibility_status">"Accessibility Status: "</string>
    <string name="active">Active</string>
    <string name="admin">Admin</string>
    <string name="user_phone">User Phone</string>
    <string name="user_name">User Name</string>
    <string name="accessbility_status_updated_successfully">Accessibility status updated successfully!</string>
    <string name="enter_number_of_days">Enter number of days</string>
    <string name="number_of_days">Number of days e.g 31</string>
    <string name="award_free_sub_content">Enter the number of days you would want to award this user for free</string>
    <string name="transactions_history">Transactions History</string>
    <string name="all_caught_up_no_history_section">All caught up! No history found</string>
    <string name="plan_duration_name">Plan duration</string>
    <string name="date_paid">Date Paid</string>
    <string name="total_earnings">Total Earnings</string>
    <string name="no_record_found">No record found for this user!</string>
    <string name="add_course_lesson">Add Lesson</string>
    <string name="all_caught_up_no_exams">All Caught Up! No exams found.</string>
    <string name="exam_title">Exam Title</string>
    <string name="no_of_questions">( 20 Questions)</string>
    <string name="exam_deleted_successfully">Exam deleted successfully!</string>
    <string name="input_exam_title">Exam Title</string>
    <string name="input_exam_subject_wise">Exam Subject Wise?</string>
    <string name="all_caught_up_no_questions">All caught up! No questions found.</string>
    <string name="question_subject">Select Subject</string>
    <string name="question">Question (basic HTML allowed)</string>
</resources>