<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


<!--    <item-->
<!--        android:id="@+id/filter"-->
<!--        android:title="@string/help"-->
<!--        app:showAsAction="always"-->
<!--        tools:ignore="AlwaysShowAction" />-->

    <item android:id="@+id/all_users"
        android:icon="@drawable/ic_users"
        app:showAsAction="always"
        android:visible="false"
        android:title="@string/all_users" />

    <item android:id="@+id/action_help"
        android:icon="@drawable/ic_help"
        app:showAsAction="always"
        android:title="@string/help" />

    <item android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:visible="false"
        app:showAsAction="always"
        android:title="@string/settings" />

</menu>