<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/history_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_margin="@dimen/dimen_10dp"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/plan_name"
                    android:maxLines="1"
                    android:textColor="@color/intro_title_color"
                    android:ellipsize="end"
                    android:text="@string/plan_name"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/plan_amount"
                    android:textColor="@color/intro_title_color"
                    android:text="@string/plan_amount"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/plan_duration_name"
                    android:textColor="@color/intro_title_color"
                    android:text="@string/plan_duration_name"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/date_paid"
                    android:textColor="@color/intro_title_color"
                    android:text="@string/date_paid"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/user_name"
                    android:textColor="@color/intro_title_color"
                    android:text="@string/user_name"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/user_phone"
                    android:textColor="@color/intro_title_color"
                    android:text="@string/user_phone"
                    />

            </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>