<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activities.UpdateHomeSlide">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/slide_img"
            android:scaleType="fitXY"
            android:src="@drawable/greendemy_logo"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/login_logo"
        tools:targetApi="lollipop">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/slider_title"
            android:textSize="18sp"
            android:drawableTint="@color/colorPrimary"
            android:background="@drawable/round_corner_toggle"
            android:inputType="textMultiLine"
            android:nextFocusUp="@id/input_title"
            android:nextFocusLeft="@id/input_title"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            tools:targetApi="m" />

    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/login_logo"
            tools:targetApi="lollipop">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_subtitle"
                android:textSize="18sp"
                android:drawableTint="@color/colorPrimary"
                android:background="@drawable/round_corner_toggle"
                android:inputType="textMultiLine"
                android:nextFocusUp="@id/input_subtitle"
                android:nextFocusLeft="@id/input_subtitle"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                tools:targetApi="m" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/login_logo"
            tools:targetApi="lollipop">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_go_to_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_go_to_url"
                android:textSize="18sp"
                android:drawableTint="@color/colorPrimary"
                android:background="@drawable/round_corner_toggle"
                android:inputType="textMultiLine"
                android:nextFocusUp="@id/input_go_to_url"
                android:nextFocusLeft="@id/input_go_to_url"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                tools:targetApi="m" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:text="@string/update"
            android:id="@+id/btn_update_slide"
            android:textColor="@color/colorWhite"
            android:layout_marginBottom="80dp"
            android:textAllCaps="false"
            android:backgroundTint="@color/colorPrimary"
            android:layout_height="wrap_content">
        </com.google.android.material.button.MaterialButton>

    </LinearLayout>

    </ScrollView>


</RelativeLayout>